# ternary-temperament

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
